[package]
name = "quic-probe"
version = "0.1.0"
edition = "2021"
authors = ["Kuba Jaroszewski <jakub.jaroszewski@gmail.com>"]
description = "Library and app to probe QUIC servers"
repository = "https://github.com/pierd/quic-probe"
homepage = "https://github.com/pierd/quic-probe"
keywords = ["networking", "udp"]
categories = ["network-programming"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
quinn = { version = "0.10" }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"]}
tracing = { version = "0.1" }

rustls-native-certs = { version = "0.6.2", optional = true }
webpki-roots = { version = "0.23.0", optional = true }

[features]
default = ["tls-webpki-roots", "tls-native-roots"]
tls-webpki-roots = ["dep:webpki-roots"]
tls-native-roots = ["dep:rustls-native-certs"]
